some minor formatting changes and readability fixes

--- a/translate/src/modules/user/components/UserNotification.css
+++ b/translate/src/modules/user/components/UserNotification.css
@@ -36,15 +36,6 @@
   padding: 10px;
 }
 
-.user-notification .item-content .date-display {
-  color: var(--light-grey-2);
-  font-size: 11px;
-  font-weight: normal;
-  margin-top: 8px;
-  text-align: right;
-  text-transform: uppercase;
-}
-
 .user-notification span {
   color: var(--translation-color);
   float: none;
@@ -133,7 +124,8 @@
 }
 /* End message styling */
 
-.user-notification .timeago {
+.user-notification .timeago,
+.user-notification .date-display {
   color: var(--light-grey-2);
   display: block;
   font-size: 11px;
